	* symeval.h: 
	Add the header declarations necessary for the multiple-values
	implementation. 
	* inline.c: 
	#include symeval.h, now that it has some inline functions.
	* lisp.h: 
	Update Fthrow's declaration. Make throw_or_bomb_out available to
	all files. 
	* lrecord.h (enum lrecord_type): 
	Add the multiple_value type here. 

2009-07-31  Stephen Turnbull  <stephen@xemacs.org>

	* config.h.in (HAVE_DBM):
	* database.c (HAVE_DBM): 
	Use gdbm/ndbm.h if needed (via NDBM_H_FILE).
	Thanks to Karl Kleinpaste for the report.

2009-07-28  Stephen Turnbull  <stephen@xemacs.org>

	* faces.c (ensure_face_cachel_contains_charset):
	(add_face_cachel):
	(update_face_cachel_data):
	Fix typos in comments and otherwise improve them.

2009-07-27  Stephen J. Turnbull  <stephen@xemacs.org>

	* eval.c (debug-on-error): Document interaction with process filters.

2009-07-15 Aidan Kehoe <kehoea@parhasard.net>

	* syntax.c (complex_vars_of_syntax): 
	?\012 is whitespace, as it always should have been, thank you Karl
	Kleinpaste and the Gnus team!

2009-07-11  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (undecided_canonicalize_after_coding): 
	If no data have been seen, or if
	coding_stream_canonicalize_after_coding gives nil, pass back
	str->codesys, which will be of type undecided (the same as the old
	behaviour) but will reflect any CODESYS argument passed to
	make_coding_input_stream. See also the change in lisp/code-files.el

2009-06-09  Jerry James  <james@xemacs.org>

	* glyphs-eimage.c (jpeg_instantiate):
	(gif_instantiate):
	(png_instantiate):
	(tiff_instantiate): Check for integer overflow before allocating
	memory for an image.

2009-06-20  Stephen Turnbull  <stephen@xemacs.org>

	* callint.c (Finteractive): Document that (interactive) must
	appear at the "top level" of a function definition to be effective.

2009-06-14  Aidan Kehoe  <kehoea@parhasard.net>

	* eval.c (For): 
	* eval.c (Fand): 
	* eval.c (Fif): 
	* eval.c (Fwhen): 
	* eval.c (Fcond):